# cppfront-cmake-wrapper

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
cmake/: EmbedCppFront.cmake  FindCppFront.cmake
example/: CMakeLists.txt  main.cpp2
example/include/: something.hpp
example/src/: something.cpp2
